<resources>
    <string name="app_name">AndroidExpert-Sub1-AMR0017</string>
    <string name="title_favorite">favorite</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Username</string>
    <string name="repository_text">Repository</string>
    <string name="followers_text">Followers</string>
    <string name="following_text">Following</string>
    <string name="username_detail">%s\'s profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="setting">Setting</string>
    <string name="light_mode">Light Mode</string>
    <string name="username_text">Username</string>
    <string name="favorite">Favorite</string>
    <string name="profile_contentDesc">Profile Picture</string>
    <string name="detailphoto">detailPhoto</string>
    <string name="setfavorite">setFavorite</string>
    <string name="sharebutton">ShareButton</string>
</resources>